# rc5w32

./: CMakeLists.txt  README.md
src/: rc5w32.c  rc5w32.h
tests/: CMakeLists.txt  main.cpp
